# InternVL

internvl_chat/: .gitignore  custom.json  pyproject.toml  train.sh  train_bg.sh  upload_model.sh
internvl_chat/internvl/model/internvl_chat/: modeling_intern_vit.py
internvl_chat/internvl/train/: dataset.py
internvl_chat/shell/data/: human_zed_in_bowl.json
internvl_chat/shell/internvl2.5/2nd_finetune/: internvl2_5_2b_dynamic_res_2nd_finetune_lora.sh  internvl2_5_8b_dynamic_res_2nd_finetune_lora.sh
requirements/: internvl_chat.txt
